@@ -2,6 +2,9 @@
 
 	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix some text.  Remove
 	experimental tag from --bridge-sensors option.
+
+	* libfreeipmi/src/sensor-read/ipmi-sensor-read.c: Add comments on
+	workaround needs.
 	
 2011-09-15  Albert Chu <chu11@llnl.gov>
 
